--- a/templates/index.html
+++ b/templates/index.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSCREDHILLS</title>
-    <link rel="shortcut icon" type="image/x-icon" href="../static/images/logo (1).ico">
-
+    <link rel="icon" type="image/x-icon" href="../static/images/logo (1).ico">
+    <link href="../static/styles.css" rel="stylesheet">
+    <link rel="stylesheet" href="static\register.css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='footer.css') }}">
 </head>
 <body>
     {% include 'header/header.html' %}
