--- a/templates/index.html
+++ b/templates/index.html
@@ -85,6 +85,35 @@
             </div>
         </div>
     </div>
+    <div class="container mt-5">
+        <h2 class="text-center">Registration Form</h2>
+        <form action="/register" method="post">
+          <div class="form-group">
+            <label for="firstname">First Name</label>
+            <input type="text" class="form-control" id="firstname" name="firstname" required>
+          </div>
+          <div class="form-group">
+            <label for="email">Email</label>
+            <input type="email" class="form-control" id="email" name="email" required>
+          </div>
+          <div class="form-group">
+            <label for="mobilenumber">Mobile Number</label>
+            <input type="text" class="form-control" id="mobilenumber" name="mobilenumber" required>
+          </div>
+          <div class="form-group">
+            <label for="whatsappnumber">WhatsApp Number</label>
+            <input type="text" class="form-control" id="whatsappnumber" name="whatsappnumber">
+          </div>
+          <div class="form-group">
+            <label for="role">Role</label>
+            <select class="form-control" id="role" name="role" required>
+              <option value="student">Student</option>
+              <option value="employee">Employee</option>
+            </select>
+          </div>
+          <button type="submit" class="btn btn-primary">Register</button>
+        </form>
+      </div>
     {% extends 'footer/footer.html' %}    
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
