--- a/templates/header/header.html
+++ b/templates/header/header.html
@@ -29,6 +29,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="/locations"><i class="fa-solid fa-location-dot"></i>Locations</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/courses"><i class="fa-solid fa-location-dot"></i>Course</a>
+                    </li>
                 </ul>
             </div>
         </div>
