csc-serend commit

--- a/templates/header/header.html
+++ b/templates/header/header.html
@@ -24,7 +24,7 @@
                         <a class="nav-link" href="/"><i class="fa-solid fa-house"></i>Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/aboutcsc"><i class="fa-solid fa-circle-info"></i>About Csc</a>
+                        <a class="nav-link" href="/aboutcsc"><i class="fa-solid fa-circle-info"></i>About CSC</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/locations"><i class="fa-solid fa-location-dot"></i>Locations</a>
