--- a/templates/index.html
+++ b/templates/index.html
@@ -5,12 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSCREDHILLS</title>
     <link rel="icon" type="image/x-icon" href="../static/images/logo (1).ico">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link href="../static/styles.css" rel="stylesheet">
-
-
-    <link href="https://fonts.googleapis.com/css?family=Muli:300,400,700,900" rel="stylesheet">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />  
-    <link rel="stylesheet" href="static/icomoon-style.css">
   
     <link rel="stylesheet" href="static/css-bootstrap.min.css">
     <link rel="stylesheet" href="static/css-jquery-ui.css">
@@ -28,6 +24,14 @@
     <link href="static/css-jquery.mb.YTPlayer.min.css" media="all" rel="stylesheet" type="text/css">
   
     <link rel="stylesheet" href="static/css-style.css">
+
+
+    <script src="https://d3js.org/d3.v5.min.js"></script>
+    <script src="https://momentjs.com/downloads/moment.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <script src="https://rawgit.com/nstrayer/slid3r/master/dist/slid3r.js"></script>
+    <script src = "https://unpkg.com/topojson@3.0.2/dist/topojson.js"></script>
+    <script src = "https://d3js.org/colorbrewer.v1.min.js"></script>
 
 </head>
 <body>
