--- a/templates/index.html
+++ b/templates/index.html
@@ -1,38 +1,156 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CSCREDHILLS</title>
-    <link rel="icon" type="image/x-icon" href="../static/images/logo (1).ico">
-    <link href="../static/styles.css" rel="stylesheet">
+ <title>CSC - REDHILLS</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
 
-    <link rel="stylesheet" href="static/css-bootstrap.min.css">
-    <link rel="stylesheet" href="static/css-jquery-ui.css">
-    <link rel="stylesheet" href="static/css-owl.carousel.min.css">
-    <link rel="stylesheet" href="static/css-owl.theme.default.min.css">
-    <link rel="stylesheet" href="static/css-owl.theme.default.min.css">
-  
-    <link rel="stylesheet" href="static/css-jquery.fancybox.min.css">
-  
-    <link rel="stylesheet" href="static/css-bootstrap-datepicker.css">
-  
-    <link rel="stylesheet" href="static/font-flaticon.css">
-  
-    <link rel="stylesheet" href="static/css-aos.css">
-    <link href="static/css-jquery.mb.YTPlayer.min.css" media="all" rel="stylesheet" type="text/css">
-  
-    <link rel="stylesheet" href="static/css-style.css">
+  <link href="https://fonts.googleapis.com/css?family=Muli:300,400,700,900" rel="stylesheet">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />  
+  <link rel="stylesheet" href="static/icomoon-style.css">
+
+  <link rel="stylesheet" href="static/css-bootstrap.min.css">
+  <link rel="stylesheet" href="static/css-jquery-ui.css">
+  <link rel="stylesheet" href="static/css-owl.carousel.min.css">
+  <link rel="stylesheet" href="static/css-owl.theme.default.min.css">
+  <link rel="stylesheet" href="static/css-owl.theme.default.min.css">
+
+  <link rel="stylesheet" href="static/css-jquery.fancybox.min.css">
+
+  <link rel="stylesheet" href="static/css-bootstrap-datepicker.css">
+
+  <link rel="stylesheet" href="static/font-flaticon.css">
+
+  <link rel="stylesheet" href="static/css-aos.css">
+  <link href="static/css-jquery.mb.YTPlayer.min.css" media="all" rel="stylesheet" type="text/css">
+
+  <link rel="stylesheet" href="static/css-style.css">
+
+
+
 </head>
-<body>
+
+<body data-spy="scroll" data-target=".site-navbar-target" data-offset="300">
+
+  <div class="site-wrap">
+
+    <div class="site-mobile-menu site-navbar-target">
+      <div class="site-mobile-menu-header">
+        <div class="site-mobile-menu-close mt-3">
+          <span class="icon-close2 js-menu-toggle"></span>
+        </div>
+      </div>
+      <div class="site-mobile-menu-body"></div>
+    </div>
+
+
+       <div class="py-2 bg-light">
+      <div class="container">
+        <div class="row align-items-center">
+          <div class="col-lg-7 d-none d-lg-block">
+            <h2><a href="#" class="small mr-3"><span class="material-symbols-outlined"> call </span> +(91)  94444 94164,  77086 48377</a></h2> 
+          </div>
+          <div class="col-lg-3 text-right">
+                <a href="#" class="small mr-3"></a><a href="#" class="small mr-3">csccomputerredhills@.com</a> 
+          </div>
+		            <div class="col-lg-2 text-right">
+                  <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">&nbsp;&nbsp;Register</button>
+          </div>
+        </div>
+      </div>
+    </div>
+<div class="modal fade" id="myModal" role="dialog">
+    <div class="modal-dialog">
+    
+      <!-- Modal content-->
+      <div class="modal-content">
+        <div class="modal-header">
+          <h4 class="modal-title">Student Registration Form</h4>
+           <button type="button" class="close" style="margin-top: -16px; font-size: 28px;" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+        </div>
+        <div class="modal-body">
+          <div class="row">
+                <div class="col-md-12 form-group">
+                       <input type="text" id="fname" placeholder="Name*" class="form-control form-control-lg">
+                </div>
+		  </div>
+                <div class="row">
+                <div class="col-md-12 form-group">
+                       <input type="text" id="fname" placeholder="Email*" class="form-control form-control-lg">
+                </div>
+		  </div>
+		  <div class="row">
+                <div class="col-md-12 form-group">
+                       <input type="text" id="fname" placeholder="Phone*" class="form-control form-control-lg">
+                </div>
+		  </div>
+		     <div class="row">
+                <div class="col-md-12 form-group">
+                       <select class="form-control" id="sel1" name="sellist1">
+							<option>Select the Course</option>
+							<option>Full Stack Developer</option>
+							<option>Data Science</option>
+							<option>Data Analyst</option>
+							<option>HDCA-Programming (Honors Diploma in Computer Application)</option>
+							<option>HDCA-Tally (Honors Diploma in Computer Application)</option>
+							<option>DCA-Programming(Diploma in Computer Application)</option>
+							<option>DCA-Tally(Diploma in Computer Application)</option>
+							<option>ADPP (Advanced Diploma in Python Programming)</option>
+							<option>DFPD (Diploma in Full Stack Python Developer)</option>
+							<option>DMO (Diploma in MS Office)</option>
+							<option>CCAE(Certificate Course in Advanced Excel)</option>
+							<option>Diploma in .Net</option>
+							<option>ADJP (Advanced Diploma in Java Programming)</option>
+							<option>DPFD (Diploma in PHP Full Stack Developer)</option>
+							<option>HDFD (Honors Diploma in Full Stack Developer)</option>
+							<option>MDSA (Master Diploma in System Administration)</option>
+							<option>Spoken English</option>
+							<option>Women's wear pattern making</option>
+							<option>Fashion for Women's wear</option>
+							<option>Advanced Pattern Making for Women &amp; Kids wear</option>
+							<option>Hand Embroidery</option>
+							<option>Fashion Jewellery Making</option>
+							<option>Softtoys Making</option>
+							<option>Ladies single garment</option>
+					   </select>
+                </div>
+		  </div>
+		  <div class="row">
+                <div class="col-md-12 form-group">
+				       <select class="form-control" id="sel1" name="sellist1">
+							<option>Planning to start training</option>
+							<option>Immediately</option>
+							<option>In Two weeks</option>
+							<option>In a month</option>
+					   </select>
+                </div>
+		  </div>
+            <div class="row">
+                <div class="col-md-12 form-group">
+                      <textarea name="" id="message" cols="30" rows="5" placeholder="Please type your message" class="form-control"></textarea>
+                </div>
+            </div>
+        </div>
+        <div class="modal-footer">
+		  <button type="button" class="btn btn-default" data-dismiss="modal">Save</button>
+          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        </div>
+      </div>
+      
+    </div>
+  </div>
+
     <header class="site-navbar py-4 js-sticky-header site-navbar-target" role="banner">
 
         {% include 'header/header.html' %}
 
     </header>
-    <br><br>
-    <div class="container mt-5">
+
+      <div class="container mt-5">
         <div id="computerCarousel" class="carousel slide" data-ride="carousel">
             <ol class="carousel-indicators">
                 <li data-target="#computerCarousel" data-slide-to="0" class="active"></li>
@@ -108,6 +226,8 @@
             </div>
         </div>
     </div>
+    
+  <!-- loader -->
   <div id="loader" class="show fullscreen"><svg class="circular" width="48px" height="48px"><circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee"></circle><circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10" stroke="#51be78"></circle></svg></div>
 
   <script src="static/js/3984-js-jquery-3.3.1.min.js"></script>
@@ -128,6 +248,8 @@
 
 
 
+  <script src="static/js/3576-js-main.js"></script>
   {% extends 'footer/footer.html' %} 
 </body>
+
 </html>
