--- a/templates/pages/courses.html
+++ b/templates/pages/courses.html
@@ -180,7 +180,7 @@
 			 <div class="col-lg-4 col-md-6 mb-4">
                     <div class="course-1-item">
                         <figure class="thumnail">
-                                <a href="syllabus-hdfd.html"><img src="static/images/images-course-hdfd.jpg" alt="Image" class="img-fluid"></a>
+                                <a href="syllabus-hdfd.html"><img src="../static/images/images-course-hdfd.jpg" alt="Image" class="img-fluid"></a>
                          <div class="category"><h3>HDFD</h3></div>  
                         </figure>
                         <div class="course-1-content pb-4">
@@ -194,7 +194,7 @@
                                <div class="col-lg-4 col-md-6 mb-4">
                     <div class="course-1-item">
                         <figure class="thumnail">
-                        <a href="syllabus-data-analytics.html"><img src="static/images/images-course_2.jpg" alt="Image" class="img-fluid"></a>
+                        <a href="syllabus-data-analytics.html"><img src="../static/images/images-course_2.jpg" alt="Image" class="img-fluid"></a>
                           <div class="category"><h3>Data Analytics | Data Analyst</h3></div>  
                         </figure>
                         <div class="course-1-content pb-4">
@@ -209,7 +209,7 @@
                     <div class="course-1-item">
                         <figure class="thumnail">
                                 <a href="syllabus-data-science.html">
-								<img src="static/images/images-course_5.jpg" alt="Image" class="img-fluid"></a>
+								<img src="../static/images/images-course_5.jpg" alt="Image" class="img-fluid"></a>
                         <div class="category"><h3>Data Science | Data Engineer</h3></div>  
                         </figure>
                         <div class="course-1-content pb-4">
@@ -223,7 +223,7 @@
 	    <div class="col-lg-4 col-md-6 mb-4">
                     <div class="course-1-item">
                         <figure class="thumnail">
-                        <a href="syllabus-dca.html"><img src="static/images/images-course-dca-tally.jpg" alt="Image" class="img-fluid"></a>
+                        <a href="syllabus-dca.html"><img src="../static/images/images-course-dca-tally.jpg" alt="Image" class="img-fluid"></a>
                           <div class="category"><h3>DCA (Tally)</h3></div>  
                         </figure>
                         <div class="course-1-content pb-4">
@@ -236,7 +236,7 @@
                 <div class="col-lg-4 col-md-6 mb-4">
                     <div class="course-1-item">
                         <figure class="thumnail">
-                        <a href="syllabus-dca-programming.html"><img src="static/images/images-course-dca-programming.jpg" alt="Image" class="img-fluid"></a>
+                        <a href="syllabus-dca-programming.html"><img src="../static/images/images-course-dca-programming.jpg" alt="Image" class="img-fluid"></a>
                           <div class="category"><h3>DCA (Programming)</h3></div>  
                         </figure>
                         <div class="course-1-content pb-4">
@@ -251,7 +251,7 @@
                     <div class="course-1-item">
                         <figure class="thumnail">
                                 <a href="syllabus-adpp.html">
-								<img src="static/images/images-course-adpp.jpg" alt="Image" class="img-fluid"></a>
+								<img src="../static/images/images-course-adpp.jpg" alt="Image" class="img-fluid"></a>
                         <div class="category"><h3>ADPP</h3></div>  
                         </figure>
                         <div class="course-1-content pb-4">
@@ -264,7 +264,7 @@
                 <div class="col-lg-4 col-md-6 mb-4">
                     <div class="course-1-item">
                         <figure class="thumnail">
-                                <a href="syllabus-dfjd.html"><img src="static/images/images-course-dfjd.jpg" alt="Image" class="img-fluid"></a>
+                                <a href="syllabus-dfjd.html"><img src="../static/images/images-course-dfjd.jpg" alt="Image" class="img-fluid"></a>
                          <div class="category"><h3>DFJD</h3></div>  
                         </figure>
                         <div class="course-1-content pb-4">
@@ -279,7 +279,7 @@
                 <div class="col-lg-4 col-md-6 mb-4">
                     <div class="course-1-item">
                         <figure class="thumnail">
-                                <a href="syllabus-dfpd.html"><img src="static/images/images-course-dfpd.jpg" alt="Image" class="img-fluid"></a>
+                                <a href="syllabus-dfpd.html"><img src="../static/images/images-course-dfpd.jpg" alt="Image" class="img-fluid"></a>
                           <div class="category"><h3>DFPD</h3></div>  
                         </figure>
                         <div class="course-1-content pb-4">
@@ -293,7 +293,7 @@
                 <div class="col-lg-4 col-md-6 mb-4">
                     <div class="course-1-item">
                         <figure class="thumnail">
-                                <a href="syllabus-hdfd.html"><img src="static/images/images-course-hdfd.jpg" alt="Image" class="img-fluid"></a>
+                                <a href="syllabus-hdfd.html"><img src="../static/images/images-course-hdfd.jpg" alt="Image" class="img-fluid"></a>
                          <div class="category"><h3>HDFD</h3></div>  
                         </figure>
                         <div class="course-1-content pb-4">
@@ -309,7 +309,7 @@
                 <div class="col-lg-4 col-md-6 mb-4">
                     <div class="course-1-item">
                         <figure class="thumnail">
-                                <a href="syllabus-dpfd.html"><img src="static/images/images-course-dpfd.jpg" alt="Image" class="img-fluid"></a>
+                                <a href="syllabus-dpfd.html"><img src="../static/images/images-course-dpfd.jpg" alt="Image" class="img-fluid"></a>
                          <div class="category"><h3>DPFD</h3></div>  
                         </figure>
                         <div class="course-1-content pb-4">
@@ -322,7 +322,7 @@
                 <div class="col-lg-4 col-md-6 mb-4">
                     <div class="course-1-item">
                         <figure class="thumnail">
-                                <a href="syllabus-hdca.html"><img src="static/images/images-course-hdca-tally.jpg" alt="Image" class="img-fluid"></a>
+                                <a href="syllabus-hdca.html"><img src="../static/images/images-course-hdca-tally.jpg" alt="Image" class="img-fluid"></a>
                          <div class="category"><h3>HDCA (Tally)</h3></div>  
                         </figure>
                         <div class="course-1-content pb-4">
@@ -335,7 +335,7 @@
 				<div class="col-lg-4 col-md-6 mb-4">
                     <div class="course-1-item">
                         <figure class="thumnail">
-                                <a href="syllabus-hdca-programming.html"><img src="static/images/images-course-hdca-programming.jpg" alt="Image" class="img-fluid"></a>
+                                <a href="syllabus-hdca-programming.html"><img src="../static/images/images-course-hdca-programming.jpg" alt="Image" class="img-fluid"></a>
                          <div class="category"><h3>HDCA (Programming)</h3></div>  
                         </figure>
                         <div class="course-1-content pb-4">
@@ -347,7 +347,7 @@
                 </div><div class="col-lg-4 col-md-6 mb-4">
                     <div class="course-1-item">
                         <figure class="thumnail">
-                                <a href="syllabus-dot-net.html"><img src="static/images/images-course-dot-net.jpg" alt="Image" class="img-fluid"></a>
+                                <a href="syllabus-dot-net.html"><img src="../static/images/images-course-dot-net.jpg" alt="Image" class="img-fluid"></a>
                          <div class="category"><h3>Diploma in .NET</h3></div>  
                         </figure>
                         <div class="course-1-content pb-4">
@@ -360,7 +360,7 @@
 				<div class="col-lg-4 col-md-6 mb-4">
                     <div class="course-1-item">
                         <figure class="thumnail">
-                                <a href="syllabus-adjp.html"><img src="static/images/images-course-adjp.jpg" alt="Image" class="img-fluid"></a>
+                                <a href="syllabus-adjp.html"><img src="../static/images/images-course-adjp.jpg" alt="Image" class="img-fluid"></a>
                          <div class="category"><h3>ADJP</h3></div>  
                         </figure>
                         <div class="course-1-content pb-4">
@@ -373,7 +373,7 @@
 				<div class="col-lg-4 col-md-6 mb-4">
                     <div class="course-1-item">
                         <figure class="thumnail">
-                                <a href="syllabus-mdsa.html"><img src="static/images/images-course-mdsa.jpg" alt="Image" class="img-fluid"></a>
+                                <a href="syllabus-mdsa.html"><img src="../static/images/images-course-mdsa.jpg" alt="Image" class="img-fluid"></a>
                          <div class="category"><h3 class="text-center">MDSA</h3></div>  
                         </figure>
                         <div class="course-1-content pb-4">
@@ -386,7 +386,7 @@
 				<div class="col-lg-4 col-md-6 mb-4">
                     <div class="course-1-item">
                         <figure class="thumnail">
-                                <a href="syllabus-dmo.html"><img src="static/images/images-course-dmo.jpg" alt="Image" class="img-fluid"></a>
+                                <a href="syllabus-dmo.html"><img src="../static/images/images-course-dmo.jpg" alt="Image" class="img-fluid"></a>
                          <div class="category"><h3>DMO</h3></div>  
                         </figure>
                         <div class="course-1-content pb-4">
@@ -399,7 +399,7 @@
 				<div class="col-lg-4 col-md-6 mb-4">
                     <div class="course-1-item">
                         <figure class="thumnail">
-                                <a href="syllabus-ccae.html"><img src="static/images/images-course-ccae.jpg" alt="Image" class="img-fluid"></a>
+                                <a href="syllabus-ccae.html"><img src="../static/images/images-course-ccae.jpg" alt="Image" class="img-fluid"></a>
                          <div class="category"><h3>CCAE</h3></div>  
                         </figure>
                         <div class="course-1-content pb-4">
@@ -412,7 +412,7 @@
 				<div class="col-lg-4 col-md-6 mb-4">
                     <div class="course-1-item">
                         <figure class="thumnail">
-                                <a href="syllabus-tally-prime.html"><img src="static/images/images-course-tally-prime.jpg" alt="Image" class="img-fluid"></a>
+                                <a href="syllabus-tally-prime.html"><img src="../static/images/images-course-tally-prime.jpg" alt="Image" class="img-fluid"></a>
                          <div class="category"><h3>Tally Prime</h3></div>  
                         </figure>
                         <div class="course-1-content pb-4">
