--- a/templates/pages/courses.html
+++ b/templates/pages/courses.html
@@ -9,24 +9,24 @@
 
   <link href="https://fonts.googleapis.com/css?family=Muli:300,400,700,900" rel="stylesheet">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />  
-  <link rel="stylesheet" href="static/icomoon-style.css">
 
-  <link rel="stylesheet" href="static/css-bootstrap.min.css">
-  <link rel="stylesheet" href="static/css-jquery-ui.css">
-  <link rel="stylesheet" href="static/css-owl.carousel.min.css">
-  <link rel="stylesheet" href="static/css-owl.theme.default.min.css">
-  <link rel="stylesheet" href="static/css-owl.theme.default.min.css">
+  <link rel="stylesheet" href="../../static/css-bootstrap.min.css">
+  <link rel="stylesheet" href="../../static/css-jquery-ui.css">
+  <link rel="stylesheet" href="../../static/css-owl.carousel.min.css">
+  <link rel="stylesheet" href="../../static/css-owl.theme.default.min.css">
+  <link rel="stylesheet" href="../../static/css-owl.theme.default.min.css">
 
-  <link rel="stylesheet" href="static/css-jquery.fancybox.min.css">
+  <link rel="stylesheet" href="../../static/css-jquery.fancybox.min.css">
 
-  <link rel="stylesheet" href="static/css-bootstrap-datepicker.css">
+  <link rel="stylesheet" href="../../static/css-bootstrap-datepicker.css">
 
-  <link rel="stylesheet" href="static/font-flaticon.css">
+  <link rel="stylesheet" href="../../static/font-flaticon.css">
 
-  <link rel="stylesheet" href="static/css-aos.css">
-  <link href="static/css-jquery.mb.YTPlayer.min.css" media="all" rel="stylesheet" type="text/css">
+  <link rel="stylesheet" href="../../static/css-aos.css">
 
-  <link rel="stylesheet" href="static/css-style.css">
+  <link href="../../static/css-jquery.mb.YTPlayer.min.css" media="all" rel="stylesheet" type="text/css">
+
+  <link rel="stylesheet" href="../../static/css-style.css">
 
 
 
@@ -180,7 +180,7 @@
 			 <div class="col-lg-4 col-md-6 mb-4">
                     <div class="course-1-item">
                         <figure class="thumnail">
-                                <a href="syllabus-hdfd.html"><img src="../static/images/images-course-hdfd.jpg" alt="Image" class="img-fluid"></a>
+                                <a href="syllabus-hdfd.html"><img src="../../static/images/images-course-hdfd.jpg" alt="Image" class="img-fluid"></a>
                          <div class="category"><h3>HDFD</h3></div>  
                         </figure>
                         <div class="course-1-content pb-4">
@@ -194,7 +194,7 @@
                                <div class="col-lg-4 col-md-6 mb-4">
                     <div class="course-1-item">
                         <figure class="thumnail">
-                        <a href="syllabus-data-analytics.html"><img src="../static/images/images-course_2.jpg" alt="Image" class="img-fluid"></a>
+                        <a href="syllabus-data-analytics.html"><img src="../../static/images/images-course_2.jpg" alt="Image" class="img-fluid"></a>
                           <div class="category"><h3>Data Analytics | Data Analyst</h3></div>  
                         </figure>
                         <div class="course-1-content pb-4">
@@ -209,7 +209,7 @@
                     <div class="course-1-item">
                         <figure class="thumnail">
                                 <a href="syllabus-data-science.html">
-								<img src="../static/images/images-course_5.jpg" alt="Image" class="img-fluid"></a>
+								<img src="../../static/images/images-course_5.jpg" alt="Image" class="img-fluid"></a>
                         <div class="category"><h3>Data Science | Data Engineer</h3></div>  
                         </figure>
                         <div class="course-1-content pb-4">
@@ -223,7 +223,7 @@
 	    <div class="col-lg-4 col-md-6 mb-4">
                     <div class="course-1-item">
                         <figure class="thumnail">
-                        <a href="syllabus-dca.html"><img src="../static/images/images-course-dca-tally.jpg" alt="Image" class="img-fluid"></a>
+                        <a href="syllabus-dca.html"><img src="../../static/images/images-course-dca-tally.jpg" alt="Image" class="img-fluid"></a>
                           <div class="category"><h3>DCA (Tally)</h3></div>  
                         </figure>
                         <div class="course-1-content pb-4">
@@ -236,7 +236,7 @@
                 <div class="col-lg-4 col-md-6 mb-4">
                     <div class="course-1-item">
                         <figure class="thumnail">
-                        <a href="syllabus-dca-programming.html"><img src="../static/images/images-course-dca-programming.jpg" alt="Image" class="img-fluid"></a>
+                        <a href="syllabus-dca-programming.html"><img src="../../static/images/images-course-dca-programming.jpg" alt="Image" class="img-fluid"></a>
                           <div class="category"><h3>DCA (Programming)</h3></div>  
                         </figure>
                         <div class="course-1-content pb-4">
@@ -251,7 +251,7 @@
                     <div class="course-1-item">
                         <figure class="thumnail">
                                 <a href="syllabus-adpp.html">
-								<img src="../static/images/images-course-adpp.jpg" alt="Image" class="img-fluid"></a>
+								<img src="../../static/images/images-course-adpp.jpg" alt="Image" class="img-fluid"></a>
                         <div class="category"><h3>ADPP</h3></div>  
                         </figure>
                         <div class="course-1-content pb-4">
@@ -264,7 +264,7 @@
                 <div class="col-lg-4 col-md-6 mb-4">
                     <div class="course-1-item">
                         <figure class="thumnail">
-                                <a href="syllabus-dfjd.html"><img src="../static/images/images-course-dfjd.jpg" alt="Image" class="img-fluid"></a>
+                                <a href="syllabus-dfjd.html"><img src="../../static/images/images-course-dfjd.jpg" alt="Image" class="img-fluid"></a>
                          <div class="category"><h3>DFJD</h3></div>  
                         </figure>
                         <div class="course-1-content pb-4">
@@ -279,7 +279,7 @@
                 <div class="col-lg-4 col-md-6 mb-4">
                     <div class="course-1-item">
                         <figure class="thumnail">
-                                <a href="syllabus-dfpd.html"><img src="../static/images/images-course-dfpd.jpg" alt="Image" class="img-fluid"></a>
+                                <a href="syllabus-dfpd.html"><img src="../../static/images/images-course-dfpd.jpg" alt="Image" class="img-fluid"></a>
                           <div class="category"><h3>DFPD</h3></div>  
                         </figure>
                         <div class="course-1-content pb-4">
@@ -293,7 +293,7 @@
                 <div class="col-lg-4 col-md-6 mb-4">
                     <div class="course-1-item">
                         <figure class="thumnail">
-                                <a href="syllabus-hdfd.html"><img src="../static/images/images-course-hdfd.jpg" alt="Image" class="img-fluid"></a>
+                                <a href="syllabus-hdfd.html"><img src="../../static/images/images-course-hdfd.jpg" alt="Image" class="img-fluid"></a>
                          <div class="category"><h3>HDFD</h3></div>  
                         </figure>
                         <div class="course-1-content pb-4">
@@ -309,7 +309,7 @@
                 <div class="col-lg-4 col-md-6 mb-4">
                     <div class="course-1-item">
                         <figure class="thumnail">
-                                <a href="syllabus-dpfd.html"><img src="../static/images/images-course-dpfd.jpg" alt="Image" class="img-fluid"></a>
+                                <a href="syllabus-dpfd.html"><img src="../../static/images/images-course-dpfd.jpg" alt="Image" class="img-fluid"></a>
                          <div class="category"><h3>DPFD</h3></div>  
                         </figure>
                         <div class="course-1-content pb-4">
@@ -322,7 +322,7 @@
                 <div class="col-lg-4 col-md-6 mb-4">
                     <div class="course-1-item">
                         <figure class="thumnail">
-                                <a href="syllabus-hdca.html"><img src="../static/images/images-course-hdca-tally.jpg" alt="Image" class="img-fluid"></a>
+                                <a href="syllabus-hdca.html"><img src="../../static/images/images-course-hdca-tally.jpg" alt="Image" class="img-fluid"></a>
                          <div class="category"><h3>HDCA (Tally)</h3></div>  
                         </figure>
                         <div class="course-1-content pb-4">
@@ -335,7 +335,7 @@
 				<div class="col-lg-4 col-md-6 mb-4">
                     <div class="course-1-item">
                         <figure class="thumnail">
-                                <a href="syllabus-hdca-programming.html"><img src="../static/images/images-course-hdca-programming.jpg" alt="Image" class="img-fluid"></a>
+                                <a href="syllabus-hdca-programming.html"><img src="../../static/images/images-course-hdca-programming.jpg" alt="Image" class="img-fluid"></a>
                          <div class="category"><h3>HDCA (Programming)</h3></div>  
                         </figure>
                         <div class="course-1-content pb-4">
@@ -347,7 +347,7 @@
                 </div><div class="col-lg-4 col-md-6 mb-4">
                     <div class="course-1-item">
                         <figure class="thumnail">
-                                <a href="syllabus-dot-net.html"><img src="../static/images/images-course-dot-net.jpg" alt="Image" class="img-fluid"></a>
+                                <a href="syllabus-dot-net.html"><img src="../../static/images/images-course-dot-net.jpg" alt="Image" class="img-fluid"></a>
                          <div class="category"><h3>Diploma in .NET</h3></div>  
                         </figure>
                         <div class="course-1-content pb-4">
@@ -360,7 +360,7 @@
 				<div class="col-lg-4 col-md-6 mb-4">
                     <div class="course-1-item">
                         <figure class="thumnail">
-                                <a href="syllabus-adjp.html"><img src="../static/images/images-course-adjp.jpg" alt="Image" class="img-fluid"></a>
+                                <a href="syllabus-adjp.html"><img src="../../static/images/images-course-adjp.jpg" alt="Image" class="img-fluid"></a>
                          <div class="category"><h3>ADJP</h3></div>  
                         </figure>
                         <div class="course-1-content pb-4">
@@ -373,7 +373,7 @@
 				<div class="col-lg-4 col-md-6 mb-4">
                     <div class="course-1-item">
                         <figure class="thumnail">
-                                <a href="syllabus-mdsa.html"><img src="../static/images/images-course-mdsa.jpg" alt="Image" class="img-fluid"></a>
+                                <a href="syllabus-mdsa.html"><img src="../../static/images/images-course-mdsa.jpg" alt="Image" class="img-fluid"></a>
                          <div class="category"><h3 class="text-center">MDSA</h3></div>  
                         </figure>
                         <div class="course-1-content pb-4">
@@ -386,7 +386,7 @@
 				<div class="col-lg-4 col-md-6 mb-4">
                     <div class="course-1-item">
                         <figure class="thumnail">
-                                <a href="syllabus-dmo.html"><img src="../static/images/images-course-dmo.jpg" alt="Image" class="img-fluid"></a>
+                                <a href="syllabus-dmo.html"><img src="../../static/images/images-course-dmo.jpg" alt="Image" class="img-fluid"></a>
                          <div class="category"><h3>DMO</h3></div>  
                         </figure>
                         <div class="course-1-content pb-4">
@@ -399,7 +399,7 @@
 				<div class="col-lg-4 col-md-6 mb-4">
                     <div class="course-1-item">
                         <figure class="thumnail">
-                                <a href="syllabus-ccae.html"><img src="../static/images/images-course-ccae.jpg" alt="Image" class="img-fluid"></a>
+                                <a href="syllabus-ccae.html"><img src="../../static/images/images-course-ccae.jpg" alt="Image" class="img-fluid"></a>
                          <div class="category"><h3>CCAE</h3></div>  
                         </figure>
                         <div class="course-1-content pb-4">
@@ -412,7 +412,7 @@
 				<div class="col-lg-4 col-md-6 mb-4">
                     <div class="course-1-item">
                         <figure class="thumnail">
-                                <a href="syllabus-tally-prime.html"><img src="../static/images/images-course-tally-prime.jpg" alt="Image" class="img-fluid"></a>
+                                <a href="syllabus-tally-prime.html"><img src="../../static/images/images-course-tally-prime.jpg" alt="Image" class="img-fluid"></a>
                          <div class="category"><h3>Tally Prime</h3></div>  
                         </figure>
                         <div class="course-1-content pb-4">
@@ -434,20 +434,20 @@
   <!-- loader -->
   <div id="loader" class="show fullscreen"><svg class="circular" width="48px" height="48px"><circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee"></circle><circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10" stroke="#51be78"></circle></svg></div>
 
-  <script src="static/js/3984-js-jquery-3.3.1.min.js"></script>
-  <script src="static/js/3518-js-jquery-migrate-3.0.1.min.js"></script>
-  <script src="static/js/3112-js-jquery-ui.js"></script>
-  <script src="static/js/8226-js-popper.min.js"></script>
-  <script src="static/js/3277-js-bootstrap.min.js"></script>
-  <script src="static/js/7827-js-owl.carousel.min.js"></script>
-  <script src="static/js/4673-js-jquery.stellar.min.js"></script>
-  <script src="static/js/674-js-jquery.countdown.min.js"></script>
-  <script src="static/js/6018-js-bootstrap-datepicker.min.js"></script>
-  <script src="static/js/4301-js-jquery.easing.1.3.js"></script>
-  <script src="static/js/4601-js-aos.js"></script>
-  <script src="static/js/7967-js-jquery.fancybox.min.js"></script>
-  <script src="static/js/8178-js-jquery.sticky.js"></script>
-  <script src="static/js/7798-js-jquery.mb.YTPlayer.min.js"></script>
+  <script src="../../static/js/3984-js-jquery-3.3.1.min.js"></script>
+  <script src="../../static/js/3518-js-jquery-migrate-3.0.1.min.js"></script>
+  <script src="../../static/js/3112-js-jquery-ui.js"></script>
+  <script src="../../static/js/8226-js-popper.min.js"></script>
+  <script src="../../static/js/3277-js-bootstrap.min.js"></script>
+  <script src="../../static/js/7827-js-owl.carousel.min.js"></script>
+  <script src="../../static/js/4673-js-jquery.stellar.min.js"></script>
+  <script src="../../static/js/674-js-jquery.countdown.min.js"></script>
+  <script src="../../static/js/6018-js-bootstrap-datepicker.min.js"></script>
+  <script src="../../static/js/4301-js-jquery.easing.1.3.js"></script>
+  <script src="../../static/js/4601-js-aos.js"></script>
+  <script src="../../static/js/7967-js-jquery.fancybox.min.js"></script>
+  <script src="../../static/js/8178-js-jquery.sticky.js"></script>
+  <script src="../../static/js/7798-js-jquery.mb.YTPlayer.min.js"></script>
 
 
 
