--- a/templates/header/header.html
+++ b/templates/header/header.html
@@ -21,16 +21,16 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="/"><i class="fa-solid fa-house"></i>Home</a>
+                        <a class="nav-link" href="/">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/aboutcsc"><i class="fa-solid fa-circle-info"></i>About CSC</a>
+                        <a class="nav-link" href="/aboutcsc">About CSC</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/locations"><i class="fa-solid fa-location-dot"></i>Locations</a>
+                        <a class="nav-link" href="/locations">Locations</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/courses"><i class="fa-solid fa-location-dot"></i>Course</a>
+                        <a class="nav-link" href="/courses">Course</a>
                     </li>
                 </ul>
             </div>
