--- a/templates/pages/courses.html
+++ b/templates/pages/courses.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Courses</title>
+    <title>CSCREDHILLS</title>
+    <link rel="icon" type="image/x-icon" href="../static/images/logo (1).ico">
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
